- Upgraded bundled sqlite to version 3.6.13. (Ilia)
- Upgraded bundled PCRE to version 7.9. (Nuno)

- Undeprecated ticks. (Arnaud)

- Improved IMAP support (Pierre):
  - Added imap_gc to clear the imap cache
  - Added imap_utf8_to_mutf7 and imap_mutf7_to_utf8

- Implemented FR #41712 (curl progress callback: CURLOPT_PROGRESSFUNCTION).
  (sdteffen[at]gmail[dot].com, Pierre)

- Added 'n' flag to fopen to allow passing O_NONBLOCK to the underlying
  open(2) system call. (Mikko)
- Added "dechunk" filter which can decode HTTP responses with chunked
  transfer-encoding. HTTP streams use this filter automatically in case
  "Transfer-Encoding: chunked" header presents in response. It's possible to
  disable this behaviour using "http"=>array("auto_decode"=>0) in stream
  context. (Dmitry)
- Added ability to throw exceptions from SQLite3 instead of warnings. (Scott)

- Fixed bug #48087 (call_user_method() invalid free of arguments). (Felipe)
- Fixed bug #48060 (pdo_pgsql - large objects are returned as empty). (Matteo)
- Fixed bug #48034 (PHP crashes when script is 8192 (8KB) bytes long). (Dmitry)
- Fixed bug #48023 (spl_autoload_register didn't store closures). (Etienne)
- Fixed bug #48004 (Error handler prevents creation of default object).
  (Dmitry)
- Fixed bug #47880 (crashes in call_user_func_array()). (Dmitry)
- Fixed bug #47856 (stristr() converts needle to lower-case). (Ilia)
- Fixed bug #47851 (is_callable throws fatal error). (Dmitry)
- Fixed bug #47819 (Getting pdo_mysql.so: undefined symbol: mysqlnd_debug_init
  at startup). (Johannes)
- Fixed bug #47816 (pcntl tests failing on NetBSD). (Matteo)
- Fixed bug #47779 (Wrong value for SIG_UNBLOCK and SIG_SETMASK constants).
  (Matteo)
- Fixed bug #47771 (Exception during object construction from arg call calls
  object's destructor). (Dmitry)
- Fixed bug #47745 (FILTER_VALIDATE_INT doesn't allow minimum integer).
  (Dmitry)
- Fixed bug #47714 (autoloading classes inside exception_handler leads to